--- a/spring-crud-boot/pom.xml
+++ b/spring-crud-boot/pom.xml
@@ -9,32 +9,18 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ufc.br</groupId>
-	<artifactId>crud-springboot-1</artifactId>
+	<artifactId>spring-crud-boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>crud-springboot-1</name>
+	<name>spring-crud-boot</name>
 	<description>Crud com springboot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		
 	</properties>
 
 	<dependencies>
-	
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
-		</dependency>
-	
-	
-	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
