--- a/crud-springboot-1/pom.xml
+++ b/crud-springboot-1/pom.xml
@@ -21,6 +21,12 @@
 
 	<dependencies>
 	
+	
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>	
+	
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
