--- a/spring-boot-crud/pom.xml
+++ b/spring-boot-crud/pom.xml
@@ -22,6 +22,13 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.0.4.RELEASE</version>
+		</dependency>
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
